globus-simple-ca (4.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 12:19:13 -0500

globus-simple-ca (4.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Wed, 22 Jan 2014 13:27:36 -0500

globus-simple-ca (3.5-1) unstable; urgency=low

  * GT-405: Non-portable use of echo in shell script

 -- Globus Toolkit <support@globus.org>  Thu, 10 Oct 2013 13:14:57 -0400

globus-simple-ca (3.4-2) unstable; urgency=low

  * Don't die in postinst if domain name is not qualified

 -- Globus Toolkit <support@globus.org>  Fri, 13 September 2013 09:48:23 -0400

globus-simple-ca (3.4-1) unstable; urgency=low

  * Fix test for absolute path on some versions of expr

 -- Globus Toolkit <support@globus.org>  Fri, 24 May 2013 12:25:25 -0400

globus-simple-ca (3.3-1) unstable; urgency=low

  * GT-362: simple ca loses spaces in dn in signing policy

 -- Globus Toolkit <support@globus.org>  Wed, 13 Feb 2013 15:30:46 -0500

globus-simple-ca (3.2-2) unstable; urgency=low

  * 5.2.3

 -- Globus Toolkit <support@globus.org>  Mon, 26 Nov 2012 11:24:53 -0500

globus-simple-ca (3.2-1) unstable; urgency=low

  * GT-312: automate native simple_ca package more

 -- Globus Toolkit <support@globus.org>  Tue, 30 Oct 2012 16:49:33 -0400

globus-simple-ca (3.1-1) unstable; urgency=low

  * GT-151: Build RPMS for SuSE 11

 -- Globus Toolkit <support@globus.org>  Tue, 22 May 2012 08:56:59 -0400

globus-simple-ca (3.0-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-simple-ca (3.0-1) unstable; urgency=low

  * Remove obsolete get-orig-source rules

 -- Globus Toolkit <support@globus.org>  Wed, 23 Nov 2011 14:54:53 -0500

globus-simple-ca (3.0-0) unstable; urgency=low

  * Update to 5.1.3

 -- Globus Toolkit <support@globus.org>  Tue, 15 Nov 2011 16:26:13 -0500
