@@ -1,6 +1,6 @@
 AC_PREREQ([2.60])
 
-AC_INIT([globus_simple_ca],[4.1],[http://jira.globus.org])
+AC_INIT([globus_simple_ca],[4.2],[http://jira.globus.org])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
 AC_SUBST([AGE_VERSION], [1])
@@ -56,12 +56,13 @@ AM_CONDITIONAL(BUILD_MANPAGES, [
                 test "$XMLLINT" != "no"])
 
 AC_CONFIG_FILES(
-        globus-simple-ca-undefined.pc
+        [globus-simple-ca-undefined.pc
         globus-simple-ca.pc
         grid-ca-create
         grid-ca-package
         grid-ca-sign
         Makefile
-        test/Makefile)
+        test/Makefile],
+        [chmod a+x grid-ca-create grid-ca-package grid-ca-sign])
 
 AC_OUTPUT
