@@ -602,7 +602,7 @@ fi
 globus_source "${libexecdir}/globus-sh-tools-vars.sh"
 
 PROGRAM_NAME="${0##*/}"
-PROGRAM_VERSION="$(expr '$Revision$' : ".Revision: \([0-9\.]*\) .")"
+PROGRAM_VERSION="@VERSION@"
 PACKAGE="@PACKAGE@"
 VERSION="@VERSION@"
 DIRT_TIMESTAMP="@DIRT_TIMESTAMP@"
