@@ -45,7 +45,7 @@ fi
 globus_source ${libexecdir}/globus-sh-tools.sh
 
 PROGRAM_NAME="${0##*/}"
-PROGRAM_VERSION="$(expr '$Revision$' : ".Revision: \([0-9\.]*\) .")"
+PROGRAM_VERSION="@VERSION@"
 PACKAGE="@PACKAGE@"
 VERSION="@VERSION@"
 DIRT_TIMESTAMP="@DIRT_TIMESTAMP@"
