@@ -1,3 +1,9 @@
+globus-simple-ca (4.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 18 Feb 2014 14:38:44 -0500
+
 globus-simple-ca (4.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
